// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > accepts height and width as prop overrides 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root textField_f7kh2f6 css-1xp5r68-MuiFormControl-root-MuiTextField-root"
    spellcheck="false"
    style="height: 123px; max-width: 600px; width: 456px;"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
        id="react-use-id-0"
        type="text"
        value="some input value"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1nf2c5d-MuiNotchedOutlined-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input > renders with the right styles by default 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root textField_f7kh2f6 css-1xp5r68-MuiFormControl-root-MuiTextField-root"
    spellcheck="false"
    style="height: 40px; max-width: 600px; width: 100%;"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
        id="react-use-id-0"
        type="text"
        value="some input value"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1nf2c5d-MuiNotchedOutlined-root"
        >
          <span
            aria-hidden="true"
            class="notranslate"
          >
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
